# src/carts/cart-item.entity.ts
@@ -1,0 +1,36 @@
+import {
+  Column,
+  CreateDateColumn,
+  Entity,
+  JoinColumn,
+  ManyToOne,
+  PrimaryGeneratedColumn,
+} from 'typeorm';
+import { Product } from '../products/product.entity';
+import { Cart } from './cart.entity';
+
+@Entity('cart_items')
+export class CartItem {
+  @PrimaryGeneratedColumn('uuid')
+  id: string;
+
+  @Column({ name: 'cart_id', type: 'uuid' })
+  cartId: string;
+
+  @ManyToOne(() => Cart, (cart) => cart.items)
+  @JoinColumn({ name: 'cart_id' })
+  cart: Cart;
+
+  @Column({ name: 'product_id', type: 'uuid' })
+  productId: string;
+
+  @ManyToOne(() => Product)
+  @JoinColumn({ name: 'product_id' })
+  product: Product;
+
+  @Column({ type: 'decimal', precision: 10, scale: 3 })
+  quantity: string;
+
+  @CreateDateColumn({ name: 'created_at', type: 'timestamptz' })
+  createdAt: Date;
+}
